Node api thread pool refactor

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -184,6 +184,7 @@ add_library(mmx_pos SHARED
 add_library(mmx_modules SHARED
 	src/TimeLord.cpp
 	src/Node.cpp
+	src/Node_api.cpp
 	src/Node_update.cpp
 	src/Node_verify.cpp
 	src/Node_validate.cpp
